@@ -287,7 +287,7 @@ function judgings_POST($args)
 	if ( empty($submitid) || $numupd == 0 ) return '';
 
 	$row = $DB->q('TUPLE SELECT s.submitid, s.cid, s.teamid, s.probid, s.langid,
-	               CEILING(time_factor*timelimit) AS maxruntime,
+	               CEILING(time_factor*timelimit) AS maxruntime, p.memlimit,
 	               special_run AS run, special_compare AS compare,
 	               compile_script
 	               FROM submission s
@@ -298,6 +298,9 @@ function judgings_POST($args)
 	$DB->q('UPDATE team SET judging_last_started = %s WHERE teamid = %i',
 	       now(), $row['teamid']);
 
+	if ( empty($row['memlimit']) ) {
+		$row['memlimit'] = dbconfig_get('memory_limit');
+	}
 	if ( empty($row['compare']) ) {
 		$row['compare'] = dbconfig_get('default_compare');
 	}
